// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment renders default 1`] = `
<Commentable
  body="#BODY"
  created={0}
  downvotes={0}
  owner="#OWNER"
  upvotes={0}
/>
`;

exports[`Comment renders with replies 1`] = `
<Commentable
  body="#BODY"
  comment={
    Object {
      "replies": "foo",
    }
  }
  created={0}
  downvotes={0}
  owner="#OWNER"
  upvotes={0}
/>
`;
